# vortex

./: .editorconfig  .gitignore  .oxfmtignore  .oxlintrc.json  CHANGELOG.md  README.md  deny.toml  flake.nix  knip.json  lefthook.yml  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  audit.toml  tauri.conf.json
src-tauri/.cargo/: mutants.toml
src-tauri/benches/: domain_benchmarks.rs
src-tauri/capabilities/: default.json  dev-pilot.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/adapters/: mod.rs
src-tauri/src/adapters/driven/: mod.rs
src-tauri/src/adapters/driven/clipboard/: mod.rs  tauri_clipboard_observer.rs
src-tauri/src/adapters/driven/config/: mod.rs  toml_config_store.rs
src-tauri/src/adapters/driven/credential/: keyring_account_store.rs  mod.rs  (+2 more)
src-tauri/src/adapters/driving/: mod.rs  tauri_ipc.rs
src-tauri/src/application/: command_bus.rs  error.rs  mod.rs  query_bus.rs  test_support.rs
src-tauri/src/application/commands/: add_account.rs  add_download_to_package.rs  cancel_download.rs  change_directory.rs  check_online.rs  clear_downloads_by_state.rs  create_package.rs  delete_account.rs  delete_history.rs  delete_package.rs  export_accounts.rs  export_history.rs  extract_archive.rs  group_playlists.rs  group_split_archives.rs  import_accounts.rs  import_container.rs  install_plugin.rs  mod.rs  move_package_to_folder.rs  move_queue.rs  open_download_file.rs  open_download_folder.rs  pause_all.rs  pause_download.rs  purge_history.rs  redownload.rs  register_local_file.rs  remove_download.rs  remove_download_from_package.rs  report_broken_plugin.rs  resolve_links.rs  resume_all.rs  resume_download.rs  retry_download.rs  set_package_password.rs  set_package_priority.rs  set_priority.rs  start_download.rs  store_install.rs  (+13 more)
src-tauri/src/application/queries/: count_by_state.rs  detect_duplicates.rs  find_package_by_external_id.rs  get_account.rs  get_account_traffic.rs  get_download_detail.rs  get_downloads.rs  get_history_entry.rs  get_package.rs  get_plugin_config.rs  get_plugin_store.rs  get_stats.rs  list_accounts.rs  list_archive_contents.rs  list_history.rs  list_package_downloads.rs  list_packages.rs  list_plugins.rs  mod.rs  search_history.rs  top_modules.rs
src-tauri/src/application/read_models/: account_view.rs  download_detail_view.rs  download_view.rs  history_view.rs  mod.rs  package_summary.rs  package_view.rs  plugin_config_view.rs  plugin_store_view.rs  plugin_view.rs  stats_view.rs
src-tauri/src/application/services/: account_rotator.rs  account_selector.rs  checksum_validator.rs  engine_config_bridge.rs  group_lock.rs  history_backfill.rs  history_paginate.rs  mod.rs  playlist_grouper.rs  queue_config_bridge.rs  queue_manager.rs  split_archive_grouper.rs  startup_recovery.rs  url_normalizer.rs
src-tauri/src/domain/: error.rs  event.rs  mod.rs
src-tauri/src/domain/model/: account.rs  archive.rs  captcha.rs  checksum.rs  config.rs  credential.rs  download.rs  http.rs  link.rs  meta.rs  mirror.rs  mod.rs  package.rs  plugin.rs  plugin_store.rs  queue.rs  segment.rs  views.rs
src-tauri/src/domain/notification/: format.rs  grouper.rs  mod.rs
src-tauri/src/domain/ports/: mod.rs
src-tauri/tests/: app_state_wiring.rs
(+469 files in other folders)
