[package]
name = "vortex"
version = "0.0.0"
description = "A desktop download manager"
authors = ["mpiton"]
edition = "2021"
license = "GPL-3.0-only"

[lib]
name = "vortex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
