[package]
name = "vortex"
version = "0.0.0"
description = "A desktop download manager"
authors = ["mpiton"]
edition = "2024"
license = "GPL-3.0-only"

[lib]
name = "vortex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.51.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["stream"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
futures-util = "0.3.32"
bytes = "1.11.1"

[dev-dependencies]
wiremock = "0.6.5"
