[package]
name = "vortex"
version = "0.0.0"
description = "A desktop download manager"
authors = ["mpiton"]
edition = "2024"
license = "GPL-3.0-only"

[lib]
name = "vortex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sea-orm = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
sea-orm-migration = { version = "1.1.20", features = ["sqlx-sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.51.0", features = ["full"] }
anyhow = "1"
reqwest = { version = "0.13.2", features = ["stream", "blocking"] }
tokio-util = { version = "0.7.18", features = ["rt"] }
futures-util = "0.3.32"
bytes = "1.11.1"
bincode = "2"
extism = "1.21.0"
notify = "8.2.0"
toml = "1.1.2"
dashmap = "6.1.0"
dirs = "6.0.0"
uuid = { version = "1.23.0", features = ["v4"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-notification = "2"
regex = "1"
zip = "8.5.1"
tar = "0.4.45"
flate2 = "1.1.9"
bzip2 = "0.6.1"
xz2 = "0.1.7"
zstd = "0.13.3"
sevenz-rust2 = "0.20.2"
unrar = "0.5.8"
tauri-plugin-updater = "2.10.1"
keyring = "3.6.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
tauri-plugin-pilot = { git = "https://github.com/mpiton/tauri-pilot", version = "0.3.0" }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.27.0"
wiremock = "0.6.5"
